added test target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,11 @@ target_link_libraries(kra_imp
 
 add_subdirectory(pugixml)
 add_subdirectory(zip)
-add_subdirectory(tests)
+
+if (BUILD_TESTING)
+	add_subdirectory(Catch2)
+	add_subdirectory(test)
+endif()
 
 option(KRA_IMP_BUILD_DOC "Generate documentation with Doxygen for kra_imp library" ON)
 if (KRA_IMP_BUILD_DOC)
