--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -4,9 +4,13 @@ name: CMake on multiple platforms
 
 on:
   push:
-    branches: [ dev ]
+    branches:
+      - main
+      - dev
   pull_request:
-    branches: [ dev ]
+    branches:
+      - main
+      - dev
 
 jobs:
   build:
