doxygen is not required by cmake, spli tests into more cpp files

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,4 +1,4 @@
-﻿find_package(Doxygen REQUIRED)
+﻿find_package(Doxygen)
 
 IF(NOT DOXYGEN_FOUND)
     message(STATUS "No Doxygen found. Documentation won't be built")
