--- a/cmake/config.hpp.in
+++ b/cmake/config.hpp.in
@@ -22,7 +22,7 @@
 #    define KRA_IMP_API
 #endif
 
-#define KRA_IMP_MAJOR 0
-#define KRA_IMP_MINOR 1
-#define KRA_IMP_PATCH 0
+#define KRA_IMP_MAJOR @PROJECT_VERSION_MAJOR@
+#define KRA_IMP_MINOR @PROJECT_VERSION_MINOR@
+#define KRA_IMP_PATCH @PROJECT_VERSION_PATCH@
 #define KRA_IMP_VERSION ((KRA_IMP_MAJOR << 16) | (KRA_IMP_MINOR << 8) | KRA_IMP_PATCH)
