linux cmake config fix for c files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 ﻿cmake_minimum_required (VERSION 3.22)
 
-project (kra_imp VERSION 0.1.1 LANGUAGES CXX)
+project (kra_imp VERSION 0.1.1 LANGUAGES C CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
