--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -14,7 +14,9 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: Install dependencies
       run: sudo apt-get install clang clang-tidy clang-format
@@ -30,4 +32,4 @@ jobs:
     - name: Run clang-tidy
       run: |
         cd build
-        run-clang-tidy -p . -quiet
+        run-clang-tidy -p . -quiet 'src/*' 'inc/*'
