--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -31,5 +31,4 @@ jobs:
 
     - name: Run clang-tidy
       run: |
-        cd build
-        run-clang-tidy -p . -quiet 'src/*' 'inc/*'
+        run-clang-tidy -p build -quiet $(find src inc -name '*.cpp' -o -name '*.hpp') build/generated/kra_imp/config.hpp
